--- a/argocd/1. Concepts/1.3. ArgoCD and GitOps.md
+++ b/argocd/1. Concepts/1.3. ArgoCD and GitOps.md
@@ -14,4 +14,4 @@ ArgoCD provides several benefits for GitOps deployments, including:
 
 In summary, ArgoCD is a powerful tool that enables GitOps deployments by using Git as the single source of truth for the desired state of infrastructure and application, and automating the synchronization of the target environment with the Git repository.
 
-![GitOps Workflow](/images/gitops-workflow.png)
+![GitOps Workflow](../images/gitops-workflow.png)
