--- a/argocd/3. Application Deployment/3.3. Deploying application - CLI.md
+++ b/argocd/3. Application Deployment/3.3. Deploying application - CLI.md
@@ -50,13 +50,11 @@ Once you have the ArgoCD CLI installed and configured, you can create a new appl
 
 ```powershell
 argocd app create simple-app `
---repo https://github.com/RonaldMariah/argocd-training `
+--repo https://github.com/bet01/workshops `
 --project default `
---sync-policy manual `
---path simple-app `
+--path 'argocd/simple-app' `
 --dest-server https://kubernetes.default.svc `
---dest-namespace default `
---auto-prune
+--dest-namespace default
 ```
 
 ### [Mac](#tab/bash)
@@ -65,11 +63,9 @@ argocd app create simple-app `
 argocd app create simple-app \
 --repo https://github.com/RonaldMariah/argocd-training \
 --project default \
---sync-policy manual \
 --path simple-app \
 --dest-server https://kubernetes.default.svc \
---dest-namespace default \
---auto-prune
+--dest-namespace default
 ```
 
 
