--- a/argocd/3. Application Deployment/3.4. Deleting application - CLI.md
+++ b/argocd/3. Application Deployment/3.4. Deleting application - CLI.md
@@ -16,7 +16,15 @@ This command will log you in to the ArgoCD server using the CLI.
 
 To delete an application, use the following command:
 
+### [Windows](#tab/powershell)
+
 ```powershell
+argocd app delete <application-name>
+```
+
+### [Mac](#tab/bash)
+
+```bash
 argocd app delete <application-name>
 ```
 
