--- a/argocd/3. Application Deployment/3.1. Deploying application - UI.md
+++ b/argocd/3. Application Deployment/3.1. Deploying application - UI.md
@@ -14,8 +14,8 @@ Once you have access to the ArgoCD web UI, you can create a new application by f
 - In the "General" tab, enter a name for your application (e.g. "simple-app").
 - In the "Project" tab, select the project where you want to deploy the application.
 - In the "Sync Policy" tab, select "Automatic" to enable continuous deployment.
-- In the "Source" tab, enter the Git URL for the simple-app repository (https://github.com/RonaldMariah/argocd-training).
-- In the "Path" field, enter the path to the simple-app directory (e.g. "./simple-app")
+- In the "Source" tab, enter the Git URL for the simple-app repository (https://github.com/bet01/workshops).
+- In the "Path" field, enter the path to the simple-app directory (e.g. "./argocd/simple-app")
 - In the "Destination" tab, select the target Kubernetes cluster and namespace where you want to deploy the application.
 - For namespace, select the *default* namespace.
 - Click the "Create" button to create the new application.
