--- a/argocd/5. Declarative Setup/5.1. Using Kubernetes Manifest.md
+++ b/argocd/5. Declarative Setup/5.1. Using Kubernetes Manifest.md
@@ -56,5 +56,5 @@ kubectl apply -f application.yaml
 - Verify that the application has been deployed successfully by running the following command:
 
 ```powershell
-kubectl get applications
+kubectl get Application -n argocd
 ```
