--- a/argocd/5. Declarative Setup/5.3. Deploying App-of-Apps.md
+++ b/argocd/5. Declarative Setup/5.3. Deploying App-of-Apps.md
@@ -1,6 +1,6 @@
-**Deploying a Simple Application with ArgoCD CLI**
+**Deploying an App-of-Apps with ArgoCD CLI**
 
-In this example, we'll be deploying a simple application from a Git repository using the ArgoCD CLI. Here are the steps:
+In this example, we'll be deploying an App-of-Apps from a Git repository using the ArgoCD CLI. Here are the steps:
 
 **Install and Configure the ArgoCD CLI**
 
@@ -49,10 +49,10 @@ Once you have the ArgoCD CLI installed and configured, you can create a new appl
 ### [Windows](#tab/powershell)
 
 ```powershell
-argocd app create simple-app `
+argocd app create multiple-apps `
 --repo https://github.com/bet01/workshops `
 --project default `
---path 'argocd/simple-app' `
+--path 'argocd/declarative/multiple-apps' `
 --dest-server https://kubernetes.default.svc `
 --dest-namespace default
 ```
@@ -60,10 +60,10 @@ argocd app create simple-app `
 ### [Mac](#tab/bash)
 
 ```bash
-argocd app create simple-app \
+argocd app create multiple-apps \
 --repo https://github.com/bet01/workshops \
 --project default \
---path 'argocd/simple-app' \
+--path 'argocd/declarative/multiple-apps' \
 --dest-server https://kubernetes.default.svc \
 --dest-namespace default
 ```
