--- a/argocd/6. Progressive Delivery/6.2. Argo Rollouts.md
+++ b/argocd/6. Progressive Delivery/6.2. Argo Rollouts.md
@@ -11,3 +11,12 @@ Argo Rollouts allows teams to define custom rollout strategies for their applica
 - Custom metrics and conditions: Argo Rollouts allows teams to define custom metrics and conditions for their rollout strategies, based on application-level or infrastructure-level metrics, such as response time, error rate, or resource usage. Argo Rollouts provides tools for monitoring these metrics, and for automatically promoting or rolling back the changes based on the results of the monitoring.
 
 By using Argo Rollouts, teams can perform advanced deployment strategies in a safe and automated manner, and can reduce the risk and impact of software releases on users and the system as a whole. Argo Rollouts integrates with ArgoCD, and can be used in conjunction with other Kubernetes tools and frameworks to build a robust and scalable deployment pipeline for modern cloud-native applications.
+
+To install Argo Rollouts onto a Kubernetes cluster, you can follow these steps:
+
+- Install the Argo Rollouts: Argo Rollouts requires custom resource definitions (CRDs) to be installed on the Kubernetes cluster. You can install these CRDs using the following command:
+
+```powershell
+kubectl create namespace argo-rollouts
+kubectl apply -n argo-rollouts -f https://github.com/argoproj/argo-rollouts/releases/latest/download/install.yaml
+```
