Blue Green App deployment

--- a/argocd/6. Progressive Delivery/6.3. Argo Rollouts - Blue Green Deployments.md
+++ b/argocd/6. Progressive Delivery/6.3. Argo Rollouts - Blue Green Deployments.md
@@ -19,21 +19,21 @@ Deploying a blue-green deployment using Argo Rollouts can be performed using the
 ### [Windows](#tab/powershell)
 
 ```powershell
-argocd app create simple-app `
+argocd app create blue-green-app `
 --repo https://github.com/bet01/workshops `
 --project default `
 --path 'argocd/blue-green-app' `
 --dest-server https://kubernetes.default.svc `
---dest-namespace default
+--dest-namespace argo-rollouts
 ```
 
 ### [Mac](#tab/bash)
 
 ```bash
-argocd app create simple-app \
+argocd app create blue-green-app \
 --repo https://github.com/bet01/workshops \
 --project default \
 --path 'argocd/blue-green-app' \
 --dest-server https://kubernetes.default.svc \
---dest-namespace default
+--dest-namespace argo-rollouts
 ```
