Blue Green App deployment image update

--- a/argocd/6. Progressive Delivery/6.3. Argo Rollouts - Blue Green Deployments.md
+++ b/argocd/6. Progressive Delivery/6.3. Argo Rollouts - Blue Green Deployments.md
@@ -14,7 +14,7 @@ Here's how a blue-green deployment might work with Argo Rollouts:
 
 By using Argo Rollouts for blue-green deployments, teams can reduce the risk and impact of software releases, and can deploy new features and updates to users in a controlled and automated manner. Argo Rollouts also provides tools for monitoring and validating the rollout, and for automatically promoting or rolling back the deployment based on predefined criteria and metrics.
 
-![Blue Green Deployments](../images/blue-green-deployments.bmp)
+![Blue Green Deployments](../images/blue-green-deployments.png)
 
 Deploying a blue-green deployment using Argo Rollouts can be performed using the following steps:
 
