--- a/argocd/6. Progressive Delivery/6.4. Argo Rollouts - Canary Deployments.md
+++ b/argocd/6. Progressive Delivery/6.4. Argo Rollouts - Canary Deployments.md
@@ -21,6 +21,30 @@ Deploying a canary deployment using Argo Rollouts can be performed using the fol
 ### [Windows](#tab/powershell)
 
 ```powershell
+argocd app create ambassador `
+--repo https://github.com/bet01/workshops `
+--project default `
+--path 'argocd/ambassador' `
+--dest-server https://kubernetes.default.svc `
+--dest-namespace ambassador `
+--create-namespace
+```
+
+### [Mac](#tab/bash)
+
+```bash
+argocd app create canary-app \
+--repo https://github.com/bet01/workshops \
+--project default \
+--path 'argocd/canary-app' \
+--dest-server https://kubernetes.default.svc \
+--dest-namespace argo-rollouts \
+--create-namespace
+```
+
+### [Windows](#tab/powershell)
+
+```powershell
 argocd app create canary-app `
 --repo https://github.com/bet01/workshops `
 --project default `
