--- a/argocd/2. Deploying ArgoCD/2.3. Access the ArgoCD Dashboard.md
+++ b/argocd/2. Deploying ArgoCD/2.3. Access the ArgoCD Dashboard.md
@@ -28,3 +28,4 @@ kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.pas
 ```bash
 kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d
 ```
+NOTE: may add a % to end of password, remove this if you get invalid password
